examples/test/testpolicy8364.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8364
  namespace: namespace21
spec:
  podSelector:
    matchLabels:
      key33: value36
      key0: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value16
          key33: value31
      podSelector:
        matchLabels:
          key45: value31
